--- a/PawnPlus.Core/PawnPlus.Core.csproj
+++ b/PawnPlus.Core/PawnPlus.Core.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DigitalRune.Windows.TextEditor">
+      <HintPath>..\PawnPlus\Resources\Plugins\DigitalRune.Windows.TextEditor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -42,10 +45,40 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationStatus.cs" />
+    <Compile Include="Color Tables\MenuStripColorTable.cs" />
+    <Compile Include="Document\CodeCompletionDataProvider.cs" />
+    <Compile Include="Document\CustomResourceSyntaxModeProvider.cs" />
+    <Compile Include="Document\FoldingStrategy.cs" />
+    <Compile Include="Document\MethodInsight.cs" />
+    <Compile Include="Document\MethodsProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IO\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Images\field_16xLG.png" />
+    <EmbeddedResource Include="Resources\PAWN-Mode.xshd" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Images\method_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Images\text_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\SyntaxModes.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
