--- a/Source/PawnPlus/packages.config
+++ b/Source/PawnPlus/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DockPanelSuite" version="3.0.0-alpha8" targetFramework="net452" userInstalled="true" />
+  <package id="DockPanelSuite" version="3.0.0-alpha8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
+  <package id="sharpcompress" version="0.11.1" targetFramework="net4" />
 </packages>
