Translated the entire application and created few facilities.

--- a/Source/PawnPlus.Language/PawnPlus.Language.csproj
+++ b/Source/PawnPlus.Language/PawnPlus.Language.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Language.cs" />
+    <Compile Include="LanguageManager.cs" />
     <Compile Include="LanguageEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
