--- a/Source/PawnPlus/App.config
+++ b/Source/PawnPlus/App.config
@@ -13,6 +13,9 @@
             <setting name="UpgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Language" serializeAs="String">
+                <value>en-US</value>
+            </setting>
         </PawnPlus.Properties.Settings>
     </userSettings>
 </configuration>
