--- a/Source/PawnPlus.CodeEditor/PawnPlus.CodeEditor.csproj
+++ b/Source/PawnPlus.CodeEditor/PawnPlus.CodeEditor.csproj
@@ -50,9 +50,11 @@
       <HintPath>..\packages\DockPanelSuite.3.0.0-alpha8\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CEManager.cs" />
     <Compile Include="Editor.cs">
       <SubType>Form</SubType>
     </Compile>
