--- a/Source/PawnPlus.Core/PawnPlus.Core.csproj
+++ b/Source/PawnPlus.Core/PawnPlus.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ApplicationJSON.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DownloadHandler.cs" />
+    <Compile Include="StatusManager.cs" />
     <Compile Include="UserControls\Launcher\DownloadControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
