--- a/Source/PawnPlus/Properties/Settings.settings
+++ b/Source/PawnPlus/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">en-US</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
