--- a/Source/PawnPlus/App.config
+++ b/Source/PawnPlus/App.config
@@ -16,6 +16,9 @@
             <setting name="Language" serializeAs="String">
                 <value>en-US</value>
             </setting>
+            <setting name="Compiler_Arguments" serializeAs="String">
+                <value />
+            </setting>
         </PawnPlus.Properties.Settings>
     </userSettings>
 </configuration>
