--- a/Source/PawnPlus.CodeEditor/PawnPlus.CodeEditor.csproj
+++ b/Source/PawnPlus.CodeEditor/PawnPlus.CodeEditor.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Editor.Designer.cs">
       <DependentUpon>Editor.cs</DependentUpon>
     </Compile>
+    <Compile Include="FindReplace.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindReplace.Designer.cs">
+      <DependentUpon>FindReplace.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -78,6 +84,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FindReplace.resx">
+      <DependentUpon>FindReplace.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -85,16 +94,20 @@
     <EmbeddedResource Include="Resources\PAWNSyntax.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PawnPlus.Core\PawnPlus.Core.csproj">
-      <Project>{c8f4a17c-2ff7-49f3-ad5f-21234f54a52d}</Project>
-      <Name>PawnPlus.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\FileGroup_10135_32x.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\gear_32xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PawnPlus.Core\PawnPlus.Core.csproj">
+      <Project>{c8f4a17c-2ff7-49f3-ad5f-21234f54a52d}</Project>
+      <Name>PawnPlus.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PawnPlus.Language\PawnPlus.Language.csproj">
+      <Project>{0e913473-949c-4ec6-80f4-965ed670b30c}</Project>
+      <Name>PawnPlus.Language</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
