--- a/Source/PawnPlus/PawnPlus.csproj
+++ b/Source/PawnPlus/PawnPlus.csproj
@@ -70,6 +70,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GoToLine.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GoToLine.Designer.cs">
+      <DependentUpon>GoToLine.cs</DependentUpon>
+    </Compile>
     <Compile Include="Launcher.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,12 @@
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewForm.Designer.cs">
+      <DependentUpon>NewForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Output.cs">
       <SubType>Form</SubType>
@@ -97,11 +109,17 @@
     </Compile>
     <Compile Include="Project\ProjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GoToLine.resx">
+      <DependentUpon>GoToLine.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Launcher.resx">
       <DependentUpon>Launcher.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewForm.resx">
+      <DependentUpon>NewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Output.resx">
       <DependentUpon>Output.cs</DependentUpon>
@@ -129,6 +147,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Resources\ProjectFiles\Filterscript.pwn" />
+    <EmbeddedResource Include="Resources\ProjectFiles\Gamemode.pwn" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -158,6 +178,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <EmbeddedResource Include="Resources\ProjectFiles\Project.txt" />
+    <EmbeddedResource Include="Resources\ProjectFiles\Include.inc" />
     <None Include="Resources\gear_32xLG.png" />
     <None Include="Resources\folder_Open_32xLG.png" />
     <None Include="Resources\folder_Closed_32xLG.png" />
