--- a/Source/PawnPlus/Properties/Settings.settings
+++ b/Source/PawnPlus/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)">en-US</Value>
     </Setting>
+    <Setting Name="Compiler_Arguments" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
