--- a/Source/PawnPlus.CodeEditor/PawnPlus.CodeEditor.csproj
+++ b/Source/PawnPlus.CodeEditor/PawnPlus.CodeEditor.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Editor.Designer.cs">
       <DependentUpon>Editor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Events\Caret.cs" />
     <Compile Include="FindReplace.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,10 +101,6 @@
     <None Include="Resources\gear_32xLG.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PawnPlus.Core\PawnPlus.Core.csproj">
-      <Project>{c8f4a17c-2ff7-49f3-ad5f-21234f54a52d}</Project>
-      <Name>PawnPlus.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\PawnPlus.Language\PawnPlus.Language.csproj">
       <Project>{0e913473-949c-4ec6-80f4-965ed670b30c}</Project>
       <Name>PawnPlus.Language</Name>
