--- a/Source/PawnPlus.Core/PawnPlus.Core.csproj
+++ b/Source/PawnPlus.Core/PawnPlus.Core.csproj
@@ -44,9 +44,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.9.0.0, Culture=neutral, PublicKeyToken=5cded1a1a0a7b481, processorArchitecture=MSIL">
+      <HintPath>..\packages\DockPanelSuite.2.10.0-beta1\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationJSON.cs" />
+    <Compile Include="TreeViewNode.cs" />
+    <Compile Include="ProjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DownloadHandler.cs" />
     <Compile Include="StatusManager.cs" />
@@ -76,6 +82,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PawnPlus.CodeEditor\PawnPlus.CodeEditor.csproj">
+      <Project>{9a1d4c17-c9f0-4425-8295-e0876c823d79}</Project>
+      <Name>PawnPlus.CodeEditor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PawnPlus.Language\PawnPlus.Language.csproj">
       <Project>{0e913473-949c-4ec6-80f4-965ed670b30c}</Project>
       <Name>PawnPlus.Language</Name>
