--- a/Source/PawnPlus.PluginSample/PawnPlus.PluginSample.csproj
+++ b/Source/PawnPlus.PluginSample/PawnPlus.PluginSample.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9E9F569C-5F31-4C0E-9EEF-5F17DCDC3B32}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PawnPlus.PluginTest</RootNamespace>
-    <AssemblyName>PawnPlus.PluginTest</AssemblyName>
+    <RootNamespace>PawnPlus.PluginSample</RootNamespace>
+    <AssemblyName>PawnPlus.PluginSample</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
