--- a/Source/PawnPlus.Core/packages.config
+++ b/Source/PawnPlus.Core/packages.config
@@ -3,6 +3,7 @@
   <package id="AvalonEdit" version="5.0.2" targetFramework="net40" />
   <package id="DockPanelSuite" version="2.10.0-beta1" targetFramework="net40" />
   <package id="DockPanelSuite.ThemeVS2012Light" version="2.10.0-beta1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
   <package id="sharpcompress" version="0.11.2" targetFramework="net40" />
 </packages>
