--- a/Source/PawnPlus.Core/PawnPlus.Core.csproj
+++ b/Source/PawnPlus.Core/PawnPlus.Core.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PawnPlus.Core</RootNamespace>
     <AssemblyName>PawnPlus.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -43,23 +43,23 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Mono.Cecil, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net40\Mono.Cecil.dll</HintPath>
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Mono.Cecil.Mdb, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net40\Mono.Cecil.Mdb.dll</HintPath>
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.Mdb.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Mono.Cecil.Pdb, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net40\Mono.Cecil.Pdb.dll</HintPath>
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.Pdb.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Mono.Cecil.Rocks, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
+      <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net45\Mono.Cecil.Rocks.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
@@ -93,9 +93,9 @@
       <Link>Properties\Settings.Designer.cs</Link>
     </Compile>
     <Compile Include="ApplicationData.cs" />
-    <Compile Include="AvalonEdit\BracketSearcher.cs" />
-    <Compile Include="AvalonEdit\BracketSearchResult.cs" />
-    <Compile Include="AvalonEdit\SelectionColorizer.cs" />
+    <Compile Include="Extensibility\BracketSearcher.cs" />
+    <Compile Include="Extensibility\BracketSearchResult.cs" />
+    <Compile Include="Extensibility\SelectionColorizer.cs" />
     <Compile Include="CompileResult.cs" />
     <Compile Include="DownloadHandler.cs" />
     <Compile Include="Events\Item.cs" />
@@ -170,7 +170,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="AvalonEdit\BracketHighlightRenderer.cs" />
+    <Compile Include="Extensibility\BracketHighlightRenderer.cs" />
     <Compile Include="Workspace.cs" />
     <Compile Include="Forms\Editor.cs">
       <SubType>Form</SubType>
@@ -249,7 +249,6 @@
       <Link>Properties\Settings.settings</Link>
     </None>
     <None Include="app.config" />
-    <None Include="packages.config" />
     <EmbeddedResource Include="Resources\ProjectFiles\Filterscript.pwn" />
     <EmbeddedResource Include="Resources\ProjectFiles\Gamemode.pwn" />
   </ItemGroup>
@@ -260,6 +259,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\application_32xLG.png" />
   </ItemGroup>
   <ItemGroup>
@@ -299,7 +299,9 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="AvalonEdit\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
