--- a/Source/PawnPlus.Core/PawnPlus.Core.csproj
+++ b/Source/PawnPlus.Core/PawnPlus.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Classes\Info.cs" />
     <Compile Include="Classes\States.cs" />
     <Compile Include="Classes\Utility.cs" />
+    <Compile Include="Classes\XML.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
