--- a/Source/PawnPlus.Core/PawnPlus.Core.csproj
+++ b/Source/PawnPlus.Core/PawnPlus.Core.csproj
@@ -56,7 +56,6 @@
     <Compile Include="Classes\Info.cs" />
     <Compile Include="Classes\States.cs" />
     <Compile Include="Classes\Utility.cs" />
-    <Compile Include="Classes\XML.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -91,6 +90,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
